2005-03-21 15:56 Beth Lee-Rausch  <e.m.lee-rausch@larc.nasa.gov>

	* src/gridfortran.c (gridcreate_) Removed the uv check from
	the default cost constraint. To allow the fake geometry cases
	to run with out accessing frozen surface faces.
	* src/gridfortran.c (gridparallelloadcapri_) Turned on uv checks
	when using cad based geometry where all the surface face have 
	a valid geometry.

2005-03-21 11:02 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridprojectallfaces_) now calls
	gridMinThawedAR instead of gridMinAR inside of PARALLEL_VERBOSE
	pound-defs. This will skip the cells with four frozen nodes to
	correctly report the validity during frozen boundary layer
	adaptation.

2005-03-21 11:02 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridminar_) now calls gridMinThawedAR instead
	of gridMinAR. This will skip the cells with four frozen nodes to
	correctly report the validity during frozen boundary layer
	adaptation.

2005-03-19 15:10 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridmetric.c (gridAR) to return -2 and -3 for negative
	parameter face area or invalid cost constraint resp.

2005-03-13 17:42 Mike Park  <mike.park@nasa.gov>

	* src/plan.c (planCreate) initialized plan->ranking to NULL to
	prevent a uninitialized memory read.

2005-03-13 20:22 Mike Park  <mike.park@nasa.gov>

	* src/adj.c (adjFree) to prevent memory leak, free adj->node2item
	during the adjFree call.

2005-03-13 20:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelswap_) added a disabled block of
	code to speed up parallel swapping by formulating a plan in
	parallel and executing this plan during the blocking ghost swaps.
	Activate by setting `swap_the_safe_old_way' to FALSE.

2005-03-13 19:40 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am added plan.c to librefine.a and lbMesherX.a
	* src/plan.c (planFree) to prevent a memory leak, free non-NULL
	array pointers.

2005-03-13 18:08 Mike Park  <mike.park@nasa.gov>
